Adding MANIFEST.MF as a detection parameter to JAR extractor