@@ -1,9 +1,10 @@
 package io.zephyr.kernel.module;
 
 import java.util.Collections;
+import java.util.Set;
 
 public class DefaultJarModuleAssemblyExtractor extends JarModuleAssemblyExtractor {
   public DefaultJarModuleAssemblyExtractor() {
-    super(Collections.singleton("lib"), Collections.singleton("META-INF"));
+    super(Collections.singleton("lib"), Set.of("META-INF", "META-INF/MANIFEST.MF"));
   }
 }
